--- a/package.json
+++ b/package.json
@@ -12,17 +12,19 @@
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.4",
-    "@sanity/image-url": "^1.2.0",
+    "@sanity/client": "^7.14.0",
+    "@sanity/image-url": "^2.0.2",
     "@sanity/vision": "^4.22.0",
+    "@sanity/visual-editing": "^5.0.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.28",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
-    "next-sanity": "^11.6.12",
+    "next-sanity": "^12.0.10",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "sanity": "^4.22.0",
+    "sanity": "^5.2.0",
     "styled-components": "^6.3.5",
     "tailwind-merge": "^3.4.0"
   },
