--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "sanity": "^5.2.0",
+    "sharp": "^0.34.5",
     "styled-components": "^6.3.5",
     "tailwind-merge": "^3.4.0"
   },
