--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next-sanity": "^12.0.10",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-icons": "^5.5.0",
     "sanity": "^5.2.0",
     "sharp": "^0.34.5",
     "styled-components": "^6.3.5",
